deploy/kubernetes/complete.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: watchn
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
  labels:
    name: front-end
  name: front-end
  namespace: watchn
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: front-end
          servicePort: 80
        path: /*
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kbld.k14s.io/images: |
      - Metas:
        - Tag: latest
          Type: resolved
          URL: mongo
        URL: index.docker.io/library/mongo@sha256:29805e9a6fc2a233b9b633c7b0f382a43df3f119522b82366a72abecb302a793
  labels:
    name: carts-db
  name: carts-db
  namespace: watchn
spec:
  replicas: 1
  selector:
    matchLabels:
      name: carts-db
  template:
    metadata:
      labels:
        name: carts-db
    spec:
      containers:
      - image: index.docker.io/library/mongo@sha256:29805e9a6fc2a233b9b633c7b0f382a43df3f119522b82366a72abecb302a793
        name: carts-db
        ports:
        - containerPort: 27017
          name: mongo
        securityContext:
          capabilities:
            add:
            - CHOWN
            - SETGID
            - SETUID
            drop:
            - all
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      volumes:
      - emptyDir:
          medium: Memory
        name: tmp-volume
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: carts-db
  name: carts-db
  namespace: watchn
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    name: carts-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kbld.k14s.io/images: |
      - Metas:
        - Type: preresolved
          URL: docker.io/niallthomson/shop-carts:0.0.3
        URL: docker.io/niallthomson/shop-carts:0.0.3
  labels:
    name: carts
  name: carts
  namespace: watchn
spec:
  replicas: 1
  selector:
    matchLabels:
      name: carts
  template:
    metadata:
      labels:
        fargate: "true"
        name: carts
    spec:
      containers:
      - env:
        - name: JAVA_OPTS
          value: -Xms64m -Xmx128m -XX:PermSize=32m -XX:MaxPermSize=64m -XX:+UseG1GC
            -Djava.security.egd=file:/dev/urandom
        image: docker.io/niallthomson/shop-carts:0.0.3
        name: carts
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 512Mi
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      volumes:
      - emptyDir:
          medium: Memory
        name: tmp-volume
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: carts
  name: carts
  namespace: watchn
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    name: carts
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kbld.k14s.io/images: |
      - Metas:
        - Tag: "5.7"
          Type: resolved
          URL: mysql:5.7
        URL: index.docker.io/library/mysql@sha256:32f9d9a069f7a735e28fd44ea944d53c61f990ba71460c5c183e610854ca4854
  labels:
    name: catalogue-db
  name: catalogue-db
  namespace: watchn
spec:
  replicas: 1
  selector:
    matchLabels:
      name: catalogue-db
  template:
    metadata:
      labels:
        name: catalogue-db
    spec:
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          value: my-secret-pw
        - name: MYSQL_DATABASE
          value: watchndb
        - name: MYSQL_USER
          value: catalog_user
        - name: MYSQL_PASSWORD
          value: default_password
        image: index.docker.io/library/mysql@sha256:32f9d9a069f7a735e28fd44ea944d53c61f990ba71460c5c183e610854ca4854
        name: catalogue-db
        ports:
        - containerPort: 3306
          name: mysql
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: catalog-db
  name: catalog-db
  namespace: watchn
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    name: catalogue-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kbld.k14s.io/images: |
      - Metas:
        - Type: preresolved
          URL: docker.io/niallthomson/shop-catalog:0.0.3
        URL: docker.io/niallthomson/shop-catalog:0.0.3
  labels:
    name: catalogue
  name: catalogue
  namespace: watchn
spec:
  replicas: 1
  selector:
    matchLabels:
      name: catalogue
  template:
    metadata:
      labels:
        fargate: "true"
        name: catalogue
    spec:
      containers:
      - image: docker.io/niallthomson/shop-catalog:0.0.3
        name: catalogue
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: catalogue
  name: catalogue
  namespace: watchn
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    name: catalogue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kbld.k14s.io/images: |
      - Metas:
        - Type: preresolved
          URL: docker.io/niallthomson/shop-ui:0.0.3
        URL: docker.io/niallthomson/shop-ui:0.0.3
  labels:
    name: ui
  name: ui
  namespace: watchn
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ui
  template:
    metadata:
      labels:
        fargate: "true"
        name: ui
    spec:
      containers:
      - env:
        - name: JAVA_OPTS
          value: -Xms64m -Xmx128m -XX:PermSize=32m -XX:MaxPermSize=64m -XX:+UseG1GC
            -Djava.security.egd=file:/dev/urandom
        - name: ENDPOINTS_CATALOG
          value: http://catalogue:8080
        - name: ENDPOINTS_CARTS
          value: http://carts:8080
        - name: ENDPOINTS_ORDERS
          value: http://orders:8080
        image: docker.io/niallthomson/shop-ui:0.0.3
        name: ui
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 512Mi
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      volumes:
      - emptyDir:
          medium: Memory
        name: tmp-volume
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: ui
  name: ui
  namespace: watchn
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    name: ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kbld.k14s.io/images: |
      - Metas:
        - Type: preresolved
          URL: docker.io/niallthomson/shop-orders:0.0.3
        URL: docker.io/niallthomson/shop-orders:0.0.3
  labels:
    name: orders
  name: orders
  namespace: watchn
spec:
  replicas: 1
  selector:
    matchLabels:
      name: orders
  template:
    metadata:
      labels:
        fargate: "true"
        name: orders
    spec:
      containers:
      - env:
        - name: JAVA_OPTS
          value: -Xms128m -Xmx512m -XX:PermSize=32m -XX:MaxPermSize=64m -XX:+UseG1GC
            -Djava.security.egd=file:/dev/urandom
        image: docker.io/niallthomson/shop-orders:0.0.3
        name: orders
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 512Mi
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      volumes:
      - emptyDir:
          medium: Memory
        name: tmp-volume
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: orders
  name: orders
  namespace: watchn
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    name: orders
