deploy/kubernetes/minimal.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: watchn
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
  labels:
    name: front-end
  name: front-end
  namespace: watchn
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: ui
          servicePort: 80
        path: /*
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kbld.k14s.io/images: |
      - Metas:
        - Type: preresolved
          URL: docker.io/niallthomson/shop-carts:v0.0.5
        URL: docker.io/niallthomson/shop-carts:v0.0.5
  labels:
    name: carts
  name: carts
  namespace: watchn
spec:
  replicas: 1
  selector:
    matchLabels:
      name: carts
  template:
    metadata:
      labels:
        fargate: "true"
        name: carts
    spec:
      containers:
      - env:
        - name: JAVA_OPTS
          value: -Xms64m -Xmx128m -XX:PermSize=32m -XX:MaxPermSize=64m -XX:+UseG1GC
            -Djava.security.egd=file:/dev/urandom
        - name: SPRING_PROFILES_ACTIVE
          value: dynamodb
        - name: CARTS_DYNAMODB_TABLENAME
          valueFrom:
            configMapKeyRef:
              key: table
              name: carts-db
        image: docker.io/niallthomson/shop-carts:v0.0.5
        name: carts
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 512Mi
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      volumes:
      - emptyDir:
          medium: Memory
        name: tmp-volume
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: carts
  name: carts
  namespace: watchn
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    name: carts
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kbld.k14s.io/images: |
      - Metas:
        - Type: preresolved
          URL: docker.io/niallthomson/shop-catalog:v0.0.5
        URL: docker.io/niallthomson/shop-catalog:v0.0.5
  labels:
    name: catalogue
  name: catalogue
  namespace: watchn
spec:
  replicas: 1
  selector:
    matchLabels:
      name: catalogue
  template:
    metadata:
      labels:
        fargate: "true"
        name: catalogue
    spec:
      containers:
      - env:
        - name: DB_ENDPOINT
          valueFrom:
            secretKeyRef:
              key: endpoint
              name: catalog-writer-db
        - name: DB_USER
          valueFrom:
            secretKeyRef:
              key: username
              name: catalog-writer-db
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: catalog-writer-db
        - name: DB_NAME
          valueFrom:
            secretKeyRef:
              key: name
              name: catalog-writer-db
        image: docker.io/niallthomson/shop-catalog:v0.0.5
        name: catalogue
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: catalogue
  name: catalogue
  namespace: watchn
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    name: catalogue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kbld.k14s.io/images: |
      - Metas:
        - Type: preresolved
          URL: docker.io/niallthomson/shop-ui:v0.0.5
        URL: docker.io/niallthomson/shop-ui:v0.0.5
  labels:
    name: ui
  name: ui
  namespace: watchn
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ui
  template:
    metadata:
      labels:
        fargate: "true"
        name: ui
    spec:
      containers:
      - env:
        - name: JAVA_OPTS
          value: -Xms64m -Xmx128m -XX:PermSize=32m -XX:MaxPermSize=64m -XX:+UseG1GC
            -Djava.security.egd=file:/dev/urandom
        - name: ENDPOINTS_CATALOG
          value: http://catalogue:8080
        - name: ENDPOINTS_CARTS
          value: http://carts:8080
        - name: ENDPOINTS_ORDERS
          value: http://orders:8080
        image: docker.io/niallthomson/shop-ui:v0.0.5
        name: ui
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 512Mi
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      volumes:
      - emptyDir:
          medium: Memory
        name: tmp-volume
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: ui
  name: ui
  namespace: watchn
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    name: ui
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kbld.k14s.io/images: |
      - Metas:
        - Type: preresolved
          URL: docker.io/niallthomson/shop-orders:v0.0.5
        URL: docker.io/niallthomson/shop-orders:v0.0.5
  labels:
    name: orders
  name: orders
  namespace: watchn
spec:
  replicas: 1
  selector:
    matchLabels:
      name: orders
  template:
    metadata:
      labels:
        fargate: "true"
        name: orders
    spec:
      containers:
      - env:
        - name: JAVA_OPTS
          value: -Xms128m -Xmx512m -XX:PermSize=32m -XX:MaxPermSize=64m -XX:+UseG1GC
            -Djava.security.egd=file:/dev/urandom
        - name: SERVER_TOMCAT_ACCESSLOG_ENABLED
          value: "true"
        - name: SPRING_PROFILES_ACTIVE
          value: mysql
        - name: SPRING_DATASOURCE_WRITER_URL
          valueFrom:
            secretKeyRef:
              key: url
              name: orders-writer-db
        - name: SPRING_DATASOURCE_WRITER_USERNAME
          valueFrom:
            secretKeyRef:
              key: username
              name: orders-writer-db
        - name: SPRING_DATASOURCE_WRITER_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: orders-writer-db
        - name: SPRING_DATASOURCE_READER_URL
          valueFrom:
            secretKeyRef:
              key: url
              name: orders-reader-db
        - name: SPRING_DATASOURCE_READER_USERNAME
          valueFrom:
            secretKeyRef:
              key: username
              name: orders-reader-db
        - name: SPRING_DATASOURCE_READER_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: orders-reader-db
        image: docker.io/niallthomson/shop-orders:v0.0.5
        name: orders
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 512Mi
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      volumes:
      - emptyDir:
          medium: Memory
        name: tmp-volume
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: orders
  name: orders
  namespace: watchn
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    name: orders
